# Eclipse-New-Frontier

./: Directory.Packages.props  README.md
.github/workflows/: labeler-conflict.yml  labeler-needsreview.yml  labeler-review.yml  labeler-size.yml  labeler-stable.yml  labeler-staging.yml  labeler-untriaged.yml  publish.yml  rsi-diff.yml
Content.Client/Audio/: ContentAudioSystem.cs
Content.Client/Clothing/: ClientClothingSystem.cs
Content.Client/Credits/: CreditsWindow.xaml.cs
Content.Client/Lobby/: LobbyState.cs
Content.Client/Mapping/: MappingSystem.cs
Content.Client/PDA/: PdaMenu.xaml.cs
Content.Server/: Content.Server.csproj
Content.Server.Database/: Model.cs
Content.Server/Actions/: ActionOnInteractSystem.cs
Content.Server/Chat/: EmoteOnDamageComponent.cs
Content.Server/Construction/: ConstructionSystem.Machine.cs  MachineFrameSystem.cs
Content.Server/Database/: DatabaseRecords.cs  ServerDbBase.cs  ServerDbManager.cs
Content.Server/Delivery/: CargoDeliveryDataComponent.cs
Content.Server/Entry/: EntryPoint.cs
Content.Server/GameTicking/: GameTicker.RoundFlow.cs  GameTicker.Spawning.cs
Content.Server/Gravity/: GravityGeneratorComponent.cs  GravitySystem.cs
Content.Server/IoC/: ServerContentIoC.cs
Content.Server/Lathe/: LatheSystem.cs
Content.Server/Materials/: MaterialStorageSystem.cs
Content.Server/Resist/: CanEscapeInventoryComponent.cs
Content.Server/RoundEnd/: RoundEndSystem.cs
Resources/Credits/: TTS.txt
Tools/better_ss14_ru/locale_extractor/: Cargo.toml
Tools/better_ss14_ru/locale_extractor/src/: ftl.rs  main.rs
(+3194 files in other folders)
