[package]
name = "locale_extractor"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
walkdir = "2.5.0"
log = "0.4.27"
simple_logger = "5.0.0"
fluent-syntax = { version = "0.12.0", features = ["serde"] }
pathdiff = "0.2.3"
hex = "0.4.3"
sha2 = "0.10.8"
serde_json = "1.0.140"
unicode-bom = "2.0.3"
